Allow farmhand routing prefix